--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,20 +7,21 @@
     android:orientation="vertical">
 
     <ProgressBar
-        android:id="@+id/progress"
+        android:id="@+id/loader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="40dp"
+        android:layout_gravity="center"
         android:minWidth="40dp"
-        android:layout_gravity="center"/>
+        android:minHeight="40dp"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_playlist"
-        android:name="com.eduramza.groovytdd.PlaylistFragment"
+        android:id="@+id/playlists_list"
+        android:name="petros.efthymiou.groovy.PlaylistFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".playlist.ui.PlaylistFragment"
-        tools:listitem="@layout/fragment_item" />
+        tools:context=".playlist.PlaylistFragment"
+        tools:listitem="@layout/playlists_item" />
 
 </LinearLayout>
