--- a/app/src/main/res/layout/playlists_item.xml
+++ b/app/src/main/res/layout/playlists_item.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:id="@+id/img_playlist"
+        android:id="@+id/playlist_image"
         android:layout_marginEnd="16dp"
         android:scaleType="fitXY" />
 
@@ -15,23 +15,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/playlist_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="19sp"
             android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
-            android:id="@+id/tv_category"
+            android:id="@+id/playlist_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textAppearance="?attr/textAppearanceListItem" />
 
     </LinearLayout>
-
-
 </LinearLayout>
