my acceptance test are failing for right reason

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".DetailFragment"
     android:id="@+id/playlist_detail_root">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tv_detail_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="Name of music"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/purple_700"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_details_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Description is here"
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"/>
+
+
+</LinearLayout>
