--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".DetailFragment"
+    tools:context=".detail.ui.DetailFragment"
     android:id="@+id/playlist_detail_root">
 
     <!-- TODO: Update blank fragment layout -->
